<resources>
    <string name="app_name">Order Management</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="remember_credentials">Remember credentials</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="channel_name">General</string>
    <string name="channel_description">General notifications for order management app</string>
    <string name="go_to_login">Log In</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="user_password">User Password</string>
    <string name="create_account">Create account</string>
    <string name="create_order">Create Order</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="advance">Advance</string>
    <string name="debit">Debit</string>
    <string name="price">Price</string>
    <string name="design">Design</string>
    <string name="filling">Filling</string>
    <string name="product">Product</string>
    <string name="delivery_place">Delivery place</string>
    <string name="delivery_date">Delivery date</string>
    <string name="confirm_password">Confirm password</string>
    <string name="recordar_credenciales">Recordar credenciales</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?,</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="registrate">¡Registrate!</string>
    <string name="user_pass_warning">You must enter Username and Password</string>
    <string name="select_a_customer">Select a customer</string>
    <string name="client">Client</string>
    <string name="order_status">ORDER STATUS</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_address">Customer Address</string>
    <string name="customer_phone_number">Customer Phone Number</string>
    <string name="delivery_hour">Delivery hour</string>
    <string name="view_detail">View Detail</string>
    <string name="finish_order">Finish order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>